# Fairpath

./: .gitignore  README.md  pyproject.toml
fairness_tool/: app.py  main.py  requirements.txt
fairness_tool/config/: defaults.py
fairness_tool/core/: benchmark.py  context.py  experiment.py  workflow.py
fairness_tool/data/: __init__.py  cleaning.py  loader.py  parsers.py  utils.py  validator.py
fairness_tool/eda/: statistics.py  visualizations.py
fairness_tool/evaluation/: comparison.py  performance.py
fairness_tool/fairness/: metrics.py  mitigation.py
fairness_tool/models/: classification.py
fairness_tool/preprocessing/: encoding.py  missing_values.py  outliers.py
fairness_tool/reporting/: benchmark_analysis.py  benchmark_viz.py  report_builder.py
fairness_tool/tests/: test_svm_integration.py
fairness_tool/ui/: terminal.py
fairness_tool/utils/: logging.py  menus.py
fairpath/: app.py  main.py
fairpath/core/: benchmark.py  context.py  data_service.py  experiment.py  fairness_engine.py  fairness_service.py  interfaces.py  metadata.py  models.py  preprocessing_service.py  recommendation_service.py  reporting_service.py  workflow.py
fairpath/data/: __init__.py  parsers.py  utils.py  validator.py
fairpath/eda/: statistics.py  visualizations.py
fairpath/evaluation/: performance.py
fairpath/fairness/: metrics.py  mitigation.py
fairpath/models/: classification.py  factory.py
fairpath/preprocessing/: __init__.py  encoding.py  missing_values.py  outliers.py
fairpath/reporting/: benchmark_analysis.py  benchmark_viz.py  report_builder.py
(+6 files in other folders)
